# sense-voice.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  meta.yaml  pyproject.toml  setup.py
asr_module/: __init__.py  wrapper.cpp
cmake/: pybind11.cmake  qt_support.cmake
pytest/: test.py
sense-voice/: CMakeLists.txt  main.cc
sense-voice/include/: asr.hpp  asr_handler.hpp
sense-voice/qt_support/: asr.cpp
sense-voice/src/: asr_handler.cpp  sense-voice.cc  sense-voice.h
sense-voice/test/: test.cpp
